# sample-tracing-rust

./: Cargo.toml
src/: main.rs
